--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <div class="menu">
         <div class="menu-item" style="animation-delay: 0s;">
             <div class="menu-title">Guía Práctica 1</div>
-            <a href="pagina1.html">Ir a Opción 1</a>
+            <a href="pdfs/guia1.pdf">Ir a Opción 1</a>
         </div>
         <div class="menu-item" style="animation-delay: 0.1s;">
             <div class="menu-title">Guía Práctica 2</div>
