--- a/index.html
+++ b/index.html
@@ -107,35 +107,35 @@
         </div>
         <div class="menu-item" style="animation-delay: 0.1s;">
             <div class="menu-title">Guía Práctica 2</div>
-            <a href="pagina2.html">Ir a Opción 2</a>
+            <a href="pdfs/guia2.pdf">Ir a Opción 2</a>
         </div>
         <div class="menu-item" style="animation-delay: 0.2s;">
             <div class="menu-title">Guía Práctica 3</div>
-            <a href="pagina3.html">Ir a Opción 3</a>
+            <a href="pdfs/guia3.pdf">Ir a Opción 3</a>
         </div>
         <div class="menu-item" style="animation-delay: 0.3s;">
             <div class="menu-title">Guía Práctica 4</div>
-            <a href="pagina4.html">Ir a Opción 4</a>
+            <a href="pdfs/guia4.pdf">Ir a Opción 4</a>
         </div>
         <div class="menu-item" style="animation-delay: 0.4s;">
             <div class="menu-title">Guía Práctica 5</div>
-            <a href="pagina5.html">Ir a Opción 5</a>
+            <a href="pdfs/guia5.pdf">Ir a Opción 5</a>
         </div>
         <div class="menu-item" style="animation-delay: 0.5s;">
             <div class="menu-title">Guía Práctica 6</div>
-            <a href="pagina6.html">Ir a Opción 6</a>
+            <a href="pdfs/guia6.pdf">Ir a Opción 6</a>
         </div>
         <div class="menu-item" style="animation-delay: 0.6s;">
             <div class="menu-title">Guía Práctica 7</div>
-            <a href="pagina7.html">Ir a Opción 7</a>
+            <a href="pdfs/guia7.pdf">Ir a Opción 7</a>
         </div>
         <div class="menu-item" style="animation-delay: 0.7s;">
             <div class="menu-title">Guía Práctica 8</div>
-            <a href="pagina8.html">Ir a Opción 8</a>
+            <a href="pdfs/guia8.pdf">Ir a Opción 8</a>
         </div>
         <div class="menu-item" style="animation-delay: 0.8s;">
             <div class="menu-title">Guía Práctica 9</div>
-            <a href="pagina9.html">Ir a Opción 9</a>
+            <a href="pdfs/guia9.pdf">Ir a Opción 9</a>
         </div>
     </div>
 </body>
